fix roboto font not working and fix some pesky whitespace

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,9 +1,11 @@
+@import '~src/scss/mixins';
 @import '~src/scss/variables';
 
 $menuBreakpoint: 800px;
 $menuWidth: 200px;
 
 .header {
+  @include roboto;
   align-items: center;
   background: rgb(43,43,43);
   display: flex;
@@ -24,7 +26,7 @@ $menuWidth: 200px;
       display: none;
     }
   }
-  
+
   &__linkWrapper {
     list-style-type: none;
     text-transform: uppercase;
@@ -76,7 +78,7 @@ $menuWidth: 200px;
       color: black;
       text-decoration: none;
       transition: $standardTransition;
-  
+
       &:hover {
         color: $textBlue;
       }
@@ -96,7 +98,7 @@ $menuWidth: 200px;
     transition: $standardTransition;
     width: 0;
     z-index: 1;
-    
+
     &--active {
       background: rgba(0,0,0,0.2);
       left: $menuWidth;
